[gd_scene load_steps=3 format=3 uid="uid://diux1ypcrw6em"]

[ext_resource type="Script" uid="uid://t82yk37vr7an" path="res://UI_Elements/main_menu.gd" id="1_hvkgu"]
[ext_resource type="Texture2D" uid="uid://b407p0roctb3" path="res://UI_Elements/ui_assets/Title Screen Background 100P.png" id="2_3acur"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hvkgu")

[node name="main_menu" type="VBoxContainer" parent="."]
offset_left = 469.0
offset_top = 282.0
offset_right = 663.0
offset_bottom = 459.0

[node name="Start" type="TextureButton" parent="main_menu"]
layout_mode = 2

[node name="Options" type="TextureButton" parent="main_menu"]
layout_mode = 2

[node name="Quit Game" type="TextureButton" parent="main_menu"]
layout_mode = 2

[node name="level_selector" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Level 1" type="TextureButton" parent="level_selector"]
layout_mode = 2

[node name="Level 2" type="TextureButton" parent="level_selector"]
layout_mode = 2

[node name="Level 3" type="TextureButton" parent="level_selector"]
layout_mode = 2

[node name="Main Menu" type="TextureButton" parent="level_selector"]
layout_mode = 2

[node name="options_screen" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleScreenBackground100p" type="Sprite2D" parent="."]
position = Vector2(575, 318)
scale = Vector2(0.60740745, 0.60740745)
texture = ExtResource("2_3acur")
